--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,13 @@
 .task {
   border: 2px solid rgb(230, 135, 202);
   border-radius: 5px;
+  width: 30%;
+}
+
+.btn:hover {
+  background-color: rgb(227, 139, 139) !important;
+}
+
+i {
+  cursor: pointer;
 }
